route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: weather-tls
    cert-utils-operator.redhat-cop.io/inject-CA: "false"
  labels:
    app: weather-app
    app.kubernetes.io/component: weather-app
    app.kubernetes.io/instance: weather-app
  name: weather
spec:
  host: weather.apps.ocp.stackhack.ca
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: None
    termination: edge
  to:
    kind: Service
    name: weather-app
    weight: 100
  wildcardPolicy: None
